# risk-mcts-agent

./: .gitignore  performance.md  pyproject.toml
.github/workflows/: codeql.yml  sonarcloud.yml
src/risk_agent/: run_experiments.py
src/risk_agent/engine/: game_engine.py  game_manager.py
src/risk_agent/game_elements/: action.py  fen.py  game_state.py  zobrist.py
src/risk_agent/players/: basic_evaluation_player.py
src/risk_agent/players/mcts/: player.py  tree.py
src/risk_agent/rendering/: renderer.py
src/risk_agent/utils/: data_collector.py
tests/: conftest.py  test_fen.py  test_game_engine.py  test_game_state.py  test_golden_replay.py  test_zobrist.py
